--- a/style.css
+++ b/style.css
@@ -27,13 +27,16 @@
 }
 
 .banner-text h1 {
-    font-size: 130px;
+    font-size: 140px;
     font-family: "Great Vibes", cursive;
+    /* color: #a5c7b5; */
 }
 
 .banner-text p {
-    font-size: 20px;
+    font-size: 25px;
     font-style: italic;
+    /* color: #000; */
+    /* color: #a5c7b5; */
     /* font-family: "Kaushan script", cursive; */
 }
 
@@ -42,11 +45,33 @@
 }
 
 .banner-btn a {
+    position: relative;
     width: 150px;
     text-decoration: none;
     display: inline-block;
-    margin: 0 10px;
+    margin: 50px 10px;
     padding: 12px 0;
     color: #fff;
     border: 0.5px solid white;
+    z-index: 1;
+    transition: color 0.5s;
+}
+
+.banner-btn a span {
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #a5c7b5;
+    z-index: -1;
+    transition: 0.5s;
+}
+
+.banner-btn a:hover span {
+    width: 100%;
+}
+
+.banner-btn a:hover {
+    color: #000;
 }
