--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 .banner-text h1 {
     font-size: 140px;
     font-family: "Great Vibes", cursive;
+    /* font-family: "Kaushan script", cursive; */
     /* color: #a5c7b5; */
 }
 
@@ -74,4 +75,46 @@
 
 .banner-btn a:hover {
     color: #000;
+}
+
+#sideNav {
+    width: 250px;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background: #a5c7b5;
+    z-index: 2;
+}
+
+nav ul li {
+    list-style: none;
+    margin: 50px 20px;
+}
+
+nav ul li:first-child {
+    margin-top: 60px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+#menuBtn {
+    width: 50px;
+    height: 50px;
+    background: #a5c7b5;
+    text-align: center;
+    position: fixed;
+    right: 30px;
+    top: 40px;
+    border: 3px;
+    z-index: 3;
+    cursor: pointer;
+}
+
+#menuBtn img {
+    width: 20px;
+    margin-top: 15px;
 }
