--- a/style.css
+++ b/style.css
@@ -81,10 +81,12 @@
     width: 250px;
     height: 100vh;
     position: fixed;
-    right: 0;
+    right: -250px;
     top: 0;
-    background: #a5c7b5;
+    /* background: #a5c7b5; */
+    background: rgba(165, 199, 181, 0.5);
     z-index: 2;
+    transition: 0.5s;
 }
 
 nav ul li {
@@ -104,7 +106,8 @@ nav ul li a {
 #menuBtn {
     width: 50px;
     height: 50px;
-    background: #a5c7b5;
+    /* background: #a5c7b5; */
+    background: rgba(165, 199, 181, 0.25);
     text-align: center;
     position: fixed;
     right: 30px;
@@ -112,6 +115,7 @@ nav ul li a {
     border: 3px;
     z-index: 3;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 #menuBtn img {
