--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
     right: -250px;
     top: 0;
     /* background: #a5c7b5; */
-    background: rgba(165, 199, 181, 0.5);
+    background: rgba(165, 199, 181, 0.8);
     z-index: 2;
     transition: 0.5s;
 }
@@ -92,6 +92,7 @@
 nav ul li {
     list-style: none;
     margin: 50px 20px;
+    padding-left: 20px;
 }
 
 nav ul li:first-child {
@@ -128,7 +129,7 @@ nav ul li a {
         width: 180px;
     }
     #sideNav {
-        width: 150px;
+        width: 180px;
     }
     .banner-text h1 {
         font-size: 54px;
