about me section ready

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
 
 #banner {
@@ -65,6 +66,7 @@
     top: 0;
     left: 0;
     background: #a5c7b5;
+    /* background: #90b9a4; */
     z-index: -1;
     transition: 0.5s;
 }
@@ -140,5 +142,115 @@ nav ul li a {
     .banner-btn a {
         display: block;
         margin: 20px auto;
+    }
+}
+
+/* About me section */
+
+#aboutMe {
+    width: 100%;
+    padding: 80px 0;
+}
+
+.title-text {
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.title-text h2 {
+    margin: auto;
+    font-size: 40px;
+    color: #90b9a4;
+    font-weight: bold;
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+}
+
+.title-text h2::after {
+    content: "";
+    width: 100px;
+    height: 65px;
+    background: linear-gradient(#90b9a4, #fff);
+    position: absolute;
+    left: 0px;
+    top: -40px;
+    z-index: -1;
+    transform: rotate(5deg);
+    border-top-left-radius: 170px;
+    border-bottom-right-radius: 170px;
+}
+
+.aboutMe-box {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    /* align-items: center; */
+    text-align: center;
+}
+
+.aboutMe {
+    flex-basis: 50%;
+    margin-top: 20px;
+}
+
+.aboutMe-img {
+    flex-basis: 50%;
+    margin: auto;
+}
+
+.aboutMe-img img {
+    width: 50%;
+    border-radius: 10px;
+}
+
+.aboutMe h2 {
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 30px;
+    font-weight: 200;
+    color: #90b9a4;
+}
+
+.aboutMe-desc {
+    display: flex;
+    /* align-items: center; */
+    margin-bottom: 40px;
+}
+
+.aboutMe-icon {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    border-radius: 8px;
+    color: #90b9a4;
+}
+
+.aboutMe-text p {
+    padding: 0 20px;
+    text-align: initial;
+}
+
+@media screen and (max-width: 770px) {
+    .title-text h2 {
+        font-size: 30px;
+    }
+    .aboutMe h2 {
+        font-size: 20px;
+    }
+    .aboutMe-text p {
+        font-size: 12px;
+    }
+    .aboutMe-box {
+        flex-direction: column;
+    }
+    .aboutMe-img img {
+        width: 30%;
+        border-radius: 10px;
+    }
+    .title-text {
+        padding-bottom: 20px;
     }
 }
