--- a/style.css
+++ b/style.css
@@ -361,9 +361,22 @@ hr {
         margin: 30px;
     }
     .service-desc h3 {
-        font-size: 12px;
+        font-size: 14px;
     }
     .service-desc p {
-        font-size: 6px;
+        font-size: 10px;
+    }
+    .service-box {
+        width: 100%;
+    }
+    #menuBtn {
+        width: 30px;
+        height: 30px;
+        top: 15px;
+        right: 15px;
+    }
+    #menuBtn img {
+        width: 15px;
+        margin-top: 8px;
     }
 }
