--- a/style.css
+++ b/style.css
@@ -358,13 +358,13 @@ hr {
 @media screen and (max-width: 460px) {
     .single-service {
         flex-basis: 100%;
-        margin: 30px;
+        margin: 30px auto;
     }
     .service-desc h3 {
         font-size: 14px;
     }
     .service-desc p {
-        font-size: 10px;
+        font-size: 12px;
     }
     .service-box {
         width: 100%;
