--- a/style.css
+++ b/style.css
@@ -361,17 +361,15 @@ hr {
     }
     .single-service {
         flex-basis: 100%;
-        margin: 30px auto;
+        margin: 30px 10px;
     }
     .service-desc h3 {
         font-size: 14px;
     }
     .service-desc p {
-        font-size: 12px;
+        font-size: 10px;
     }
-    .service-box {
-        width: 100%;
-    }
+
     #menuBtn {
         width: 30px;
         height: 30px;
