--- a/style.css
+++ b/style.css
@@ -522,3 +522,24 @@ iframe {
         width: 90%;
     }
 }
+
+/* Animation */
+
+@keyframes appear {
+    from {
+        opacity: 0.5;
+        /* transform: translateX(-100px); */
+        scale: 0.2;
+    }
+    to {
+        opacity: 1;
+        /* transform: translateX(0px); */
+        scale: 1;
+    }
+}
+
+.animated {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
